test/HooksAtTheTopLevel2.expected
File "HooksAtTheTopLevel2.ml", line 3, characters 30-45:
3 |   ((div ~onClick:(fun _evt -> useMouseHook ()) ~children:[] ())[@JSX ])
                                  ^^^^^^^^^^^^^^^
Error: Hooks can't be inside conditionals, neither loops.
